# django_floppaverse

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  tox.ini
.github/workflows/: alertmanager.yml  lint_code.yml  test.yml
blog/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blogpost_content_thumbnail.py  0003_newslettersubscription.py  0004_blogpost_deleted_timestamp.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_create.html  blogpost_detail.html  home.html  search.html
blog/templatetags/: blog_tags.py
blog/tests/: test_forms.py
chat/: admin.py  consumers.py  forms.py  managers.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_auto_20220321_2026.py  0003_alter_chatmessage_in_chat_room.py
docker/grafana/: grafana.ini
docker/loki/: loki-config.yml
docker/prometheus/: alertmanager.yml  node_exporter.rules.yml  prometheus.rules.yml  prometheus.user_agent.rules.yml  prometheus.yml
docker/promtail/: promtail-config.yml
floppaverse/: asgi.py  settings.py  urls.py  views.py  wsgi.py
notifications/: consumers.py
requirements/: dev.txt  prod.txt
shared/: factories.py  managers.py  prometheus.py
shared/mixins/: helper.py  models.py
shared/templatetags/: shared.py
shared/utils/: request.py  time.py
users/: admin.py  filters.py  forms.py  managers.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_profile_pic.py  0003_userreport.py  0004_userreport_deleted_timestamp.py
(+27 files in other folders)
